--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,9 @@
+
 /* Input Bar */
 .input-bar{
     width: 62%;
     padding-left: 8px;
+   
 }
 .button{
     padding-left: 10px;
@@ -18,6 +20,7 @@
    .b-left{
        margin-top: 10px;
        
+       
    }
    .add-button{
     padding: 0.375rem 2.0rem;
@@ -26,7 +29,8 @@
     background-color: #4CAF50;
     cursor: pointer;
     transition: 0.5s;
-    margin-left: 50%;
+    margin-left: 47%;
+    
   }
   .add-button:focus{
     outline: 0;
@@ -39,6 +43,7 @@
   }
    .b-rigth{
        margin-top: 10px;
+       
    }
    .del-button{
     padding: 0.375rem 2.0rem;
@@ -66,8 +71,10 @@
     transition: 0.7s;
   }
   .add-icon, .check-icon {
+    
     color: #4CAF50;
     font-size: 2em;
+    
     
    }
 
@@ -79,6 +86,7 @@
   .left{
       display: flex;
       justify-content: flex-end;
+      
   }
   .buttons:focus{
     outline: 0;
@@ -86,25 +94,26 @@
   .buttons:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     font-size: 1.1em;
+    
   }
 
-  /* Item Row */
-  .item-row{
-    
-    background-color:  #fff5d4;
-    margin-top: 10px;
-  }
   /* Product-to-buy text */
   .text{
       display: flex;
       justify-content: center;  
+      padding: 0;
+     
+      
+      
 
   }
 
   /* Output List */
-  .prod-to-buy{
-    padding-top: 10px;
-    padding-right: 30px;
+  #prod-to-buy{
+    padding-top: 15px;
+    padding-right: 0px;
+    font-size: 100%;
+    
    
   }
   .arrow{
@@ -129,4 +138,5 @@
     .input-bar{
       width: 40%;
     }
+    
 }
