--- a/src/Header.css
+++ b/src/Header.css
@@ -1,3 +1,4 @@
+
 .top-image {
     display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
     display: -moz-box;    /* OLD - Firefox 19- (buggy but mostly works) */
@@ -10,7 +11,7 @@
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    background-image: url("./Market-banner.png");
+    background-image: url("./images/Market-banner.png");
     max-width: 100%;
     height: auto;
     background-size: cover;
@@ -22,5 +23,6 @@
     .logo{
       max-width: 40%;
       height: auto;
+      
     }
   
