--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,25 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
-.App-link {
-  color: #09d3ac;
+
+.container{
+  background-image: url("./images/background_search_mobile.jpg");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+     
 }
+h5{
+  color: #ffff;
+}
+@media only screen and (min-width:768px){
+
+  .container{
+    background-image:none;
+  }
+  h5{
+    color: black;
+  }
+  }
