--- a/src/Header.css
+++ b/src/Header.css
@@ -11,7 +11,7 @@
     -ms-flex-align: center;
     -webkit-align-items: center;
     align-items: center;
-    background-image: url("./images/Market-banner.png");
+    /* background-image: url("./images/Market-banner.png"); */
     max-width: 100%;
     height: auto;
     background-size: cover;
@@ -24,5 +24,12 @@
       max-width: 40%;
       height: auto;
       
+    }
+    @media only screen and (min-width:768px){
+
+    .top-image{
+      background-image: url('./images/background_search_desktop.jpg');
+    }
+    
     }
   
