--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,13 @@
-body {
+body, html {
+
   
   margin: 0;
+  height: 100%;
+  background: url("./images/background_search_mobile.jpg")no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -11,4 +18,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+@media only screen and (min-width:768px){
+
+  body, html{
+    background:none;
+  }
 }
