--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,14 @@
-body, html {
-  margin: 0;
-  height: 100%;
+body{
   background: url("./images/background_search_mobile.jpg")no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+}
+
+body, html {
+  margin: 0;
+  height: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -20,7 +23,7 @@ code {
 
 @media only screen and (min-width:768px){
 
-  body, html{
+ body{
     background:none;
   }
 }
