--- a/src/App.css
+++ b/src/App.css
@@ -3,13 +3,13 @@
 }
 
 
-h5{
+h4, h5{
   color: #ffff;
 }
 @media only screen and (min-width:768px){
 
   
-  h5{
+  h4, h5{
     color: black;
   }
   }
