--- a/src/components/input/Input.css
+++ b/src/components/input/Input.css
@@ -11,7 +11,6 @@
 }
 
 .input{
-   display:flex;
    flex-direction: column;
     
     
@@ -28,7 +27,25 @@
     
 }
 
-
+.add-button{
+    padding: 0.375rem 2.0rem;
+    color: #ffff;
+    border-right: 1px solid #4CAF50;
+    border-left: 1px solid #4CAF50;
+    border-radius: 4px;
+    background-color: #4CAF50;
+    cursor: pointer;
+    transition: 0.5s;
+    margin-left: 46%;
+    
+  }
+  .add-button:focus{
+    outline: 0;
+    padding: 0.4rem 2.3rem;
+  }
+  .add-button:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);  
+  }
 
 
   @media only screen and (min-width:768px){
