--- a/src/components/item/style.css
+++ b/src/components/item/style.css
@@ -1,39 +1,34 @@
 
   
    /* Big Buttons */
-   .b-left{
-       margin-top: 10px;
-       
-       
-   }
-   .add-button{
+  
+   .done-button{
     padding: 0.375rem 2.0rem;
     color: #ffff;
+    border-right: 1px solid #4CAF50;
+    border-left: 1px solid #4CAF50;
     border-radius: 4px;
     background-color: #4CAF50;
     cursor: pointer;
     transition: 0.5s;
-    margin-left: 47%;
+    margin-left: 32%;
     
   }
-  .add-button:focus{
+  .done-button:focus{
     outline: 0;
     padding: 0.4rem 2.3rem;
   }
-  .add-button:hover {
+  .done-button:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
     
 
   }
-   .b-rigth{
-       margin-top: 10px;
-       
-   }
+  
    .del-button{
     padding: 0.375rem 2.0rem;
     color: #ffff;
     border-radius: 4px;
-    background-color: rgb(243, 8, 8);
+    background-color: #f04048;
     cursor: pointer;
     transition: 0.5s;
   }
@@ -67,52 +62,42 @@
     font-size: 2.3em;
     
    }
-  .left{
-      display: flex;
-      justify-content: flex-end;
-    
-     
-      
-  }
-  .right{
-    display: flex;
-    justify-content: flex-end;
-  }
+  
   .buttons:focus{
     outline: 0;
   }
   .buttons:hover{
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
-  
-    
     
   }
 
   /* Product-to-buy text */
   .text{
-      display: flex;
-      justify-content: center;
       color: #ffff; 
   }
-  .text-align{
-    margin-top: 15px;
-  }
-
+ 
  
 
   /* Arrow */
   
   .arrow{
+     
       color: #f04048;
       font-size: 1.2em; 
-      padding: 0;          
+      padding: 0;   
+           
   }
-  .arrow-align{
+  .arrow-align {
     display: flex;
-    justify-content: flex-start;
-  }
+    justify-content:flex-end;
+    
+   
+    
+   
+
+  }  
   p{
-      font-size: 1.2em;
+      font-size: 1.1em;
   }
 
   @media only screen and (min-width:768px){
@@ -127,6 +112,7 @@
     
     .text{
       color:black;
+      
     }
     
 }
