--- a/src/components/itemCount/ItemCount.css
+++ b/src/components/itemCount/ItemCount.css
@@ -1,6 +1,5 @@
 /* Intro Component */
 .intro-component{
-    display: flex;
-    justify-content: center;
-    padding-right: 16%;
+    display: inline;
+    
   }
